# girder

./: .appveyor.yml  .babelrc  .buildpacks  .codecov.yml  .coveragerc  .dockerignore  .editorconfig  .esdoc.json  .eslintignore  .eslintrc  .eslintrc.json  .git-blame-ignore-revs  .gitignore  .istanbul.yml  .npmignore  .nycrc.json  .pre-commit-config.yaml  .pug-lintrc  .readthedocs.yml  .stylintrc  .travis.yml  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.rst  CTestConfig.cmake  Dockerfile  Dockerfile.py3  Gruntfile.js  MANIFEST.in  Procfile  README.md  README.rst  Vagrantfile  ansible.cfg  bower.json  circle.yml  config_parse.py  docker-compose.yml  events.js  (+17 more)
.appveyor/: waitforgirder.py
.circleci/: Dockerfile  build_plugins.py  ci_test.cmake  config.yml  create_ansible_subtree.sh  galaxy_deploy.sh  generatePyEnvChecksum.sh  playbook.yml  publish_esdoc.sh  publish_npm.sh  publish_pypi.sh  requirements.yml
.github/: pull_request_template.md
clients/python/: .gitignore  GirderClient.py  README.rst  cli.py  girder-cli  girder_client.py  girderclient.py  pyproject.toml  requirements.txt  setup.py
clients/python/girder_client/: __init__.py  __main__.py  _jsonemitter.py  cli.py  configure.py  util.py
cmake/: aiur_nightly.cmake  aiur_nightly_js_coverage.cmake  circle_continuous.cmake  garant_nightly.cmake  jenkins_continuous.cmake  run_aiur_dashboard.sh  run_circleci.sh  run_garant_dashboard.sh  travis_build.cmake  travis_continuous.cmake  travis_submit.cmake
collections/: WidgetCollection.js  index.js  widget.js
continuous-integration/: jenkins-pr.sh
devops/: ansible_vagrant.cmake  vagrant-playbook.yml
docs/: Makefile  README.rst  admin-docs.rst  api-docs.rst  build-docs.rst  client-event-catalog.rst  conf.py  configuration.rst  dependencies.rst  deploy.rst  deployment-alternatives.rst  deployment.rst  dev-installation.rst  developer-cookbook.rst  developer-docs.rst  developer-install.rst  development.rst  external-web-clients.rst  index.rst  installation-quickstart.rst  installation.rst  list_env_settings.py  list_env_settings.yaml  make.bat  migration-guide.rst  mount.rst  plugin-development.rst  plugins.rst  prerequisites.rst  prod-installation.rst  provisioning.rst  python-client.rst  requirements-docs.txt  security.rst  sftp.rst  tutorials.rst  user-docs.rst  user-guide.rst  user_guide.md  web-client-event-catalog.rst
girder/: .gitignore  __init__.py  __main__.py  _plugin.py  asgi.py  cli.py  constants.py  events.py  exceptions.py  main.py  notification.py  plugin.py  settings.py  tasks.py  worker_plugin.py  wsgi.py
grunt_tasks/: build.js  dev.js  fontello.js  localConfig.js  package.js  plugin.js  server.js  sphinx.js  swagger.js  test.js  version.js  webpack.config.js  webpack.dev.js  webpack.paths.js  webpack.plugins.js  (+1 more)
scripts/tests/: CMakeLists.txt
scripts/tests/test_json_config_expand_relpaths_script/: CMakeLists.txt
scripts/tests/test_json_config_expand_relpaths_script/data/: baseline.js.in  input.js
scripts/tests/test_json_config_merge_script/: CMakeLists.txt
scripts/tests/test_json_config_merge_script/data/: baseline_input_1_and_2.js  baseline_input_1_and_2_and_3.js  input1.js  input2.js  input3.js
tests/: .gitignore  .pug-lintrc  CMakeLists.txt  DocumentationTests.cmake  JavascriptTests.cmake  PythonTests.cmake  README.md  TestCommon.cmake  TestData.cmake  __init__.py  base.py  flake8.cfg  girder.coveragerc  girder.coveragerc.in  js_coverage_tool.py  jshint.cfg  jsstyle.cfg  mock_s3.py  mock_smtp.py  mongo_replicaset.py  nodelint.cfg  pep8.cfg  setup_database.py  web_client_test.py
tests/bad_plugins/bad_json/: plugin.json
tests/bad_plugins/bad_yaml/: plugin.yml
tests/cases/: access_test.py  api_describe_test.py  api_key_test.py  api_prefix_test.py  assetstore_test.py  collection_test.py  custom_root_test.py  events_test.py  external_data_core_test.py  external_data_plugin_test.py  file_test.py  filter_logging_test.py  filter_test.py  find_entry_point_plugins_test.py  folder_test.py  group_test.py  hash_state_test.py  install_test.py  item_test.py  logging_config_test.py  mail_test.py  model_singleton_test.py  model_test.py  mount_command_test.py  mount_test.py  mount_test.yml  notification_test.py  path_utilities_test.py  periodic_events_test.py  plugin_load_failure_test.py  plugin_utilities_test.py  resource_test.py  rest_decorator_test.py  rest_util_test.py  routes_test.py  routetable_test.py  search_test.py  search_test.yml  setting_test.py  setup_database_test.py  (+9 more)
tests/cases/dummylogs/: error.log.1
tests/cases/mockpath/: npm
tests/cases/mount_test_files/: file1a.txt  file1b.txt  file5.txt
tests/cases/py_client/: cli_test.py  config_test.py  lib_test.py
tests/clients/: CMakeLists.txt
tests/clients/web/: CMakeLists.txt
tests/data/: test_file.txt.md5  test_file.txt.sha512
tests/packaging/: CMakeLists.txt  pip_install_girder.sh  test_extras_install.sh  test_package_contents.py  test_plugin_copy_extras.sh  test_plugin_install.sh  test_rest_api.sh  test_web_content.sh
tests/packaging/entry_point_json_plugin/: entry_point_json_plugin.py  plugin.json  plugin_module.py  setup.py
tests/packaging/entry_point_plugin/: entry_point_plugin.py  setup.py
tests/packaging/mocks/: npm.in
tests/test_database/: spec.yml
tests/test_other_plugins/test_plugin/: server.py
tests/test_plugins/bad_server/: server.py
tests/test_plugins/custom_api_docs_test/server/: __init__.py
tests/test_plugins/has_api_prefix/: server.py
tests/test_plugins/has_deps/: plugin.json
tests/test_plugins/has_external_data/plugin_tests/data/: plugin_test_file.txt.sha512  test_file.txt.md5
tests/test_plugins/has_grunt_deps/: plugin.json
tests/test_plugins/has_model/server/models/: fake_ac_plugin_model.py
tests/test_plugins/has_nonexistent_deps/: plugin.json
tests/test_plugins/has_sub_deps/: plugin.json
tests/test_plugins/has_webroot/: plugin.yml  server.py
tests/test_plugins/mail_test/server/mail_templates/: _footer.mako
tests/test_plugins/plugin_yaml/: plugin.yml
tests/test_plugins/test_plugin/: server.py
(+2899 files in other folders)
